<resources>
    <string name="app_name">Rotate Master</string>
    <string name="setting">Setting</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="reverse_portrait">Portrait(R)</string>
    <string name="reverse_landscape">Landscape(R)</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="request_permission">Request Permission</string>
    <string name="request_rotate_permission">You need permission to use the app.\n\n<b>* Change rotate state.</b>\n<b>* Rotate the screen.</b></string>
    <string name="confirm">Confirm</string>
    <string name="rotate">Rotate</string>
    <string name="lock_rotate">Lock Rotate</string>
    <string name="back">Back</string>
    <string name="notification">Notification</string>
    <string name="start_on_boot">Start On Boot</string>
    <string name="rotate_notification_channel_id">Rotate Notification</string>
</resources>